--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JyldamMoney</title>
+  <title>JMoney</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="/logo.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/logo.png">
@@ -39,7 +39,7 @@
 <body>
 
 <div class="app">
-  <div class="logo">JyldamMoney</div>
+  <div class="logo">JMoney</div>
 
   <!-- PAGE 1: LOGIN -->
   <div class="page active" id="page1">
@@ -187,5 +187,6 @@
 
 </body>
 </html>
+
 
 
